Refactor downstreamkernel_prepare to be a script of it's own and avoid sourcing it from APKBUILD

--- a/aports/device/linux-asus-grouper/APKBUILD
+++ b/aports/device/linux-asus-grouper/APKBUILD
@@ -26,8 +26,8 @@ source="
 builddir="$srcdir/${_repository}-${_commit}"
 
 prepare() {
-	. /usr/share/pmbootstrap/kernelpkg_functions.sh
-	downstreamkernel_prepare
+	default_prepare
+	downstreamkernel_prepare "$srcdir" "$builddir" "$_config" "$_carch" "$HOSTCC"
 }
 
 build() {
@@ -57,6 +57,6 @@ package() {
 }
 
 sha512sums="11ba20986552a0b913de2a7d756d31ad9f4f67561cb88988737bba07997f00b7574604d1c19f6d890502208f12a21d48d4044edc5a8db5174b2a49d4a87573e3  linux-asus-grouper-953e26f2709dfe0c185c3c99c50b0c9d56d473a4.tar.gz
-f06f3f69abc6af37786ab11b197cd640ac107e570e44fea57b2a912029329e497ca0a3e2569bdba0f3586215c2b5521ed21d03b8f6588c5414fb4fe5cdfee747  config-asus-grouper.armhf
+a9614499186eb0f7a7b37d07a99b1a8fa5b093370bed2c0d4f7b978b49a47ac858c6cabfa4ec97ca6fec1f579bd342c38722ef930de120ecda78be0341e41411  config-asus-grouper.armhf
 d80980e9474c82ba0ef1a6903b434d8bd1b092c40367ba543e72d2c119301c8b2d05265740e4104ca1ac5d15f6c4aa49e8776cb44264a9a28dc551e0d1850dcc  compiler-gcc6.h
 9b15bf1f6cb66f54c785b0af6c9db8a7d63257e6fa3eeb0cbf47284334166aa6a7ff93e1b64ab69206c8047d64641199c0f5fcbc257bbe039263252fff45118e  duplicate-return-address-definition.patch"
