--- a/aports/device/device-samsung-jflte/APKBUILD
+++ b/aports/device/device-samsung-jflte/APKBUILD
@@ -1,4 +1,4 @@
-pkgname="device-samsung-i9505"
+pkgname="device-samsung-jflte"
 pkgdesc="Samsung Galaxy S4 International"
 pkgver=0.4
 pkgrel=5
@@ -6,7 +6,7 @@ url="https://postmarketos.org"
 license="MIT"
 arch="noarch"
 options="!check"
-depends="postmarketos-base linux-samsung-i9505 mkbootimg mesa-dri-swrast"
+depends="postmarketos-base linux-samsung-jflte mkbootimg mesa-dri-swrast"
 subpackages="$pkgname-nonfree-firmware:nonfree_firmware"
 source="deviceinfo 90-android-sec_touchscreen.rules"
 
@@ -19,7 +19,7 @@ package() {
 
 nonfree_firmware() {
 	pkgdesc="Wifi firmware"
-	depends="firmware-samsung-i9505"
+	depends="firmware-samsung-jflte"
 	mkdir "$subpkgdir"
 }
 
