--- a/aports/device/device-xiaomi-cancro/APKBUILD
+++ b/aports/device/device-xiaomi-cancro/APKBUILD
@@ -7,7 +7,7 @@ url="https://postmarketos.org"
 license="MIT"
 arch="noarch"
 options="!check"
-depends="postmarketos-base linux-xiaomi-cancro mkbootimg mesa-dri-swrast"
+depends="postmarketos-base linux-xiaomi-cancro mkbootimg mesa-dri-swrast msm-fb-refresher"
 makedepends="devicepkg-dev"
 source="deviceinfo"
 
