--- a/aports/device/linux-xiaomi-cancro/APKBUILD
+++ b/aports/device/linux-xiaomi-cancro/APKBUILD
@@ -1,4 +1,4 @@
-# Kernel config based on: arch/arm/configs/(CHANGEME!)
+# Kernel config based on: arch/arm/configs/lineageos_cancro_defconfig
 
 pkgname="linux-xiaomi-cancro"
 pkgver=3.4.0
