--- a/aports/firmware/firmware-samsung-jflte/APKBUILD
+++ b/aports/firmware/firmware-samsung-jflte/APKBUILD
@@ -1,7 +1,7 @@
 pkgname=firmware-samsung-jflte
 pkgver=1
 pkgrel=0
-pkgdesc="Samsung Galaxy S4 International Firmware"
+pkgdesc="Samsung Galaxy S4 Firmware"
 url="https://github.com/flo071/proprietary_vendor_samsung_jf-common"
 arch="noarch"
 license="proprietary"
