Revert "removed patches to unnecessary driver" this driver may be necessary for multi-touch support
This reverts commit 9d38c944bd7b9189abd058f3acb12d0e902da00f.

--- a/aports/device/linux-xiaomi-cancro/APKBUILD
+++ b/aports/device/linux-xiaomi-cancro/APKBUILD
@@ -24,6 +24,11 @@ source="
 	compiler-gcc6.h
 	01_smd_private.patch
 	02_gpu-msm-fix-gcc5-compile.patch
+	03t_spdrv.patch
+	tspdrv_2.patch
+	tspdrv_3.patch
+	tspdrv_4.patch
+	tspdrv_5.patch
 	05_q6voice.patch
 "
 builddir="$srcdir/${_repository}-${_commit}"
