Move aports into own repository (pmaports)
- Motivation -

This allows switching of postmarketOS aports (pmaports) branches
independently of the pmbootstrap code. Besides that, it's the base work
for several improvements that can be done in the future:
* multiple postmarketOS (pmaports) versions maintained in parallel,
  based on Alpine's stable versions (3.8, 3.7, ...)
* users will be able to easily switch between aport releases
* proper packaging of pmbootstrap for package managers
* pmbootstrap stable releases (1.0 version)
* split up packaging issues into own issue tracker

- New workflows -

New `pmbootstrap init` workflow:
* ask for the work dir as usually (first question)
* initialize the work folder and start logging to it, so `pmbootstrap
  log` is already working (related changes below)
* if the aports folder (new default: `$WORK/cache_git/pmaports`) does
  not exist:
  * explain that sudo will be used to set up the chroot
  * set up the native alpine chroot
  * install git
  * clone the pmaports repo
* `pmbootstrap/aports` is not in the repo anymore, and added to
  `.gitignore`
* if `pmbootstrap/aports` does not exist, try to symlink it to the
  cloned repo
* now continue as usually by asking for the device etc.

New checks that run at the beginning of pmbootstrap:
* check for a legacy `pmbootstrap/aports` folder that is not a symlink
* compatibility of the pmbootstrap version with the pmaports repository
* in order to check that, a new file `pmaports.cfg` will be in the
  repository, and it contains the minimum pmbootstrap version as well
  as the `pmaports` version
* pmbootstrap has the pmbootstrap version and minimum pmaports version
  stored in `pmb/config/__init__.py`
* the `pmaports.cfg` is read during startup and placed in
  `args.pmaports`
* new file `pmb/config/pmaports.py` has all the pmaports related checks

- Implementation details -

Extended `pmb.helpers.git.clone()`:
* NOTE: this function is also used for cloning Alpine's aports
  repositor

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# pmbootstrap will clone "pmaports" and (if pmbootstrap is not installed system
+# wide) create a symlink in the aports folder
+aports
+
+# The rest below is more or less from a default Python .gitignore
 .*.swp
 
 # Failed patches
