ci: enable coverage reports for mypy
Generate a coverage repo which GitLab can visualise.

Signed-off-by: Caleb Connolly <caleb@postmarketos.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,3 +61,8 @@ mypy:
   stage: lint
   script:
     - ".ci/mypy.sh"
+  artifacts:
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: coverage/cobertura.xml
