.gitlab-ci: save pmb log.txt on pytest failure
Currently there is very little info from test failures when the test
fails in some call to pmbootstrap. By saving the log file to CI
artifacts on failure, we can make it really easy to find/obtain
important stuff to help with debugging.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,12 @@ pytest:
     - "su build -c 'git config --global user.name CI'"
     - "echo 'build ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers"
     - ".ci/pytest.sh"
+  after_script:
+    - "cp /home/build/.local/var/pmbootstrap/log_testsuite.txt ."
+  artifacts:
+    when: on_failure
+    paths:
+      - "log_testsuite.txt"
 
 ruff:
   stage: lint
